--- a/CW2025-master/src/main/resources/gameLayout.fxml
+++ b/CW2025-master/src/main/resources/gameLayout.fxml
@@ -1,4 +1,5 @@
 <?import com.comp2042.GameOverPanel?>
+<?import com.comp2042.PausePanel?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
@@ -31,6 +32,13 @@
     <Group fx:id="groupNotification">
         <VBox alignment="CENTER">
             <GameOverPanel fx:id="gameOverPanel"/>
+        </VBox>
+    </Group>
+    
+    <!-- Pause Menu Panel -->
+    <Group fx:id="pauseGroup">
+        <VBox alignment="CENTER">
+            <PausePanel fx:id="pausePanel"/>
         </VBox>
     </Group>
     
@@ -85,6 +93,12 @@
         <Region prefHeight="10" maxHeight="10" minHeight="10"/>
         <Label text="HIGHEST LEVEL: " styleClass="score-label"/>
         <Label fx:id="survivalHighestLevelLabel" text="1" styleClass="scoreClass"/>
+    </VBox>
+    
+    <!-- HOLD Panel (Left Side) -->
+    <VBox fx:id="holdPanelVBox" layoutX="40" layoutY="60" spacing="10" alignment="TOP_CENTER">
+        <Label text="HOLD" styleClass="panel-label"/>
+        <VBox fx:id="holdPieceContainer" spacing="15" alignment="TOP_CENTER" prefWidth="100" prefHeight="100"/>
     </VBox>
     
     <!-- NEXT Panel (Right Side) -->
