restructure files for easier maintenance

--- a/CW2025-master/src/main/resources/mainMenu.fxml
+++ b/CW2025-master/src/main/resources/mainMenu.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.text.Font?>
 <?import java.net.URL?>
 
-<StackPane fx:controller="com.comp2042.MenuController" xmlns:fx="http://javafx.com/fxml" styleClass="menu-background">
+<StackPane fx:controller="com.comp2042.menu.MenuController" xmlns:fx="http://javafx.com/fxml" styleClass="menu-background">
     
     <!-- Video Background (Full Screen) -->
     <MediaView fx:id="backgroundVideo" preserveRatio="false" 
