--- a/CW2025-master/src/main/resources/modeSelection.fxml
+++ b/CW2025-master/src/main/resources/modeSelection.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import java.net.URL?>
 
-<StackPane fx:controller="com.comp2042.ModeSelectionController" xmlns:fx="http://javafx.com/fxml" styleClass="menu-background">
+<StackPane fx:controller="com.comp2042.menu.ModeSelectionController" xmlns:fx="http://javafx.com/fxml" styleClass="menu-background">
     
     <!-- Video Background (Full Screen) -->
     <MediaView fx:id="backgroundVideo" preserveRatio="false" 
