--- a/CW2025-master/src/main/resources/gameLayout.fxml
+++ b/CW2025-master/src/main/resources/gameLayout.fxml
@@ -1,5 +1,5 @@
-<?import com.comp2042.GameOverPanel?>
-<?import com.comp2042.PausePanel?>
+<?import com.comp2042.ui.panels.GameOverPanel?>
+<?import com.comp2042.ui.panels.PausePanel?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleButton?>
@@ -8,7 +8,7 @@
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.text.Text?>
 <?import java.net.URL?>
-<StackPane fx:controller="com.comp2042.GuiController"
+<StackPane fx:controller="com.comp2042.ui.GuiController"
       xmlns:fx="http://javafx.com/fxml">
     
     <!-- Background Video (Bottom Layer) -->
